# person_tracking_project

./: .gitignore  CMakeLists.txt  package.xml  robot.pmd
MATLAB Scripts/: doEDAPlots.m  generateMatFileFromTrackletArrays.m  generate_gnd_truth_model.m  generate_tracking_score.m  getAccelPSD.m  getMota.m  gnd_truth_cells_03_19_10.mat  gnd_truth_fits.mat  gnd_truth_fits_stationary_1.mat  gnd_truth_fits_walking_1.mat  gnd_truth_fits_walking_2.mat  gnd_truth_single_arrays_walking_2.mat  gnd_truth_tracklets_03_19_10.mat  loadFiles.m  loadFiles2.m  mess_with_gnd_truth.m  plotInnovation.m  plotMOTA.m  plotMotaDs2.m  plot_ground_truth.m  results_analysis.mlx  savefile.m  test_gnd_truth.m
anakin_ros/: CMakeLists.txt  package.xml
anakin_ros/launch/: anakin_ros_person1203.launch  average_tracker.launch
anakin_ros/src/: anakin_detector_node.cpp  average_tracker.py  average_tracker_v2.py  ros_realsense_1203.py  transform_publisher.py  weights_loader.py
launch/: anakin_ros.launch  challenge.launch  challenge_viz.launch  person_track.launch  trajectory_server.launch
multi_sensor_tracker/: CMakeLists.txt
multi_sensor_tracker/launch/: filter.launch
multi_sensor_tracker/src/: average_tracker.cpp  clustering.cpp  get_centroid.cpp  kalman_filter.cpp  kalman_filter.h  kalman_filter_tracker.cpp  kalman_filter_tracker_old.cpp  kalman_test.cpp  voxel_grid.cpp
multi_sensor_tracker/src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
multi_sensor_tracker/src/.metadata/.plugins/org.eclipse.epp.usagedata.recording/: upload0.csv  upload1.csv  usagedata.csv
multi_sensor_tracker/src/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
multi_sensor_tracker/src/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
multi_sensor_tracker/src/include/: kalman_filter.h
src/: Centroid_Estimator.cpp  Challenge.cpp  average_tracker.cpp  challenge_node.cpp  kalman_filter.cpp  kalman_filter.cpp.autosave  kalman_filter_tracker.cpp  kalman_test.cpp  mo_tracker.cpp  mo_tracker_node.cpp  nearest_cluster_tracker.cpp  pairing.cpp  passthrough.cpp  pcd_read.cpp  realsense_detector.py  realsense_detector_node.py  realsense_detector_node2.py  tracker.cpp  tracker_node.cpp  tracklet.cpp  velodyne_tracker.cpp  velodyne_tracker2.cpp  weights_loader.py
src/include/: Centroid_Estimator.h  awefawe.cpp  kalman_filter.h  mo_tracker.h  pairing.h  tracker.h  tracklet.h
src/include/grid_map_cdt/: Challenge.hpp
src/old_files/: centroid_estimator.cpp  kalman_filter_tracker.cpp  kalman_test.cpp  tracker.cpp  tracker.h
